# TVRemoteController

./: .gitignore  README.md
TVRemoteController/: Button.h  ButtonState.h  CMakeLists.txt  Cilinder3D.h  Circle3D.h  Color.h  Controller.h  GLWindow.h  Grid.h  Main.cpp  Main.h  Material.h  Materials.h  Math.h  Object3D.h  Observer.h  ObserverEnum.h  OpenGL.h  Point3D.h  Primitive3D.h  ScreenHelper.cpp  ScreenHelper.h  Spinner.h  Television.h  Vector3D.h  Window.h  WorldState.h
TVRemoteController/TVRemoteController/: Circle3D.h  Color.cpp  Color.h  Colors.h  Main.cpp  Main.h  Math.h  Object3D.h  Observer.cpp  Observer.h  OpenGL.cpp  OpenGL.h  Point3D.cpp  Point3D.h  ScreenHelper.cpp  ScreenHelper.h  TVRemoteController.cpp  TVRemoteController.vcxproj  TVRemoteController.vcxproj.filters  Vector3D.cpp  Vector3D.h  Window.cpp  Window.h  WorldState.cpp  WorldState.h
